# FeatureDetector

./: .gitignore  BuildLinuxInWsl.cmd  BuildWindows.cmd  CMakeLists.txt
FeatureDetector/: FeatureDetector.vcxproj
src/: Main.cpp
src/x86/: CMakeLists.txt  cpu_x86.cpp
